@@ -48,15 +48,15 @@
 
 
 /** Returns a Texture2D object given an file image
- * If the file image was not previously loaded, it will create a new Texture2D
- *  object and it will return it.
+ * If the file image was not previously loaded, it will create a new CCTexture2D
+ *  object and it will return it. It will use the filename as a key.
  * Otherwise it will return a reference of a previosly loaded image.
  * Supported image extensions: .png, .bmp, .tiff, .jpeg, .pvr, .gif
  */
 -(CCTexture2D*) addImage: (NSString*) fileimage;
 
 /** Returns a Texture2D object given a file image
- * If the file image was not previously loaded, it will create a new Texture2D object and it will return it.
+ * If the file image was not previously loaded, it will create a new CCTexture2D object and it will return it.
  * Otherwise it will load a texture in a new thread, and when the image is loaded, the callback will be called with the Texture2D as a parameter.
  * The callback will be called from the main thread, so it is safe to create any cocos2d object from the callback.
  * Supported image extensions: .png, .bmp, .tiff, .jpeg, .pvr, .gif
@@ -65,7 +65,7 @@
 -(void) addImageAsync:(NSString*) filename target:(id)target selector:(SEL)selector;
 
 /** Returns a Texture2D object given an PVRTC RAW filename
- * If the file image was not previously loaded, it will create a new Texture2D
+ * If the file image was not previously loaded, it will create a new CCTexture2D
  *  object and it will return it. Otherwise it will return a reference of a previosly loaded image
  *
  * It can only load square images: width == height, and it must be a power of 2 (128,256,512...)
@@ -75,13 +75,13 @@
 -(CCTexture2D*) addPVRTCImage: (NSString*) fileimage bpp:(int)bpp hasAlpha:(BOOL)alpha width:(int)w;
 
 /** Returns a Texture2D object given an PVRTC filename
- * If the file image was not previously loaded, it will create a new Texture2D
+ * If the file image was not previously loaded, it will create a new CCTexture2D
  *  object and it will return it. Otherwise it will return a reference of a previosly loaded image
  */
 -(CCTexture2D*) addPVRTCImage: (NSString*) filename;
 
 /** Returns a Texture2D object given an CGImageRef image
- * If the image was not previously loaded, it will create a new Texture2D object and it will return it.
+ * If the image was not previously loaded, it will create a new CCTexture2D object and it will return it.
  * Otherwise it will return a reference of a previously loaded image
  * The "key" parameter will be used as the "key" for the cache.
  * If "key" is nil, then a new texture will be created each time.
@@ -104,8 +104,13 @@
  */
 -(void) removeUnusedTextures;
 
-/** Deletes a texture from the cache
+/** Deletes a texture from the cache given a texture
  */
 -(void) removeTexture: (CCTexture2D*) tex;
+
+/** Deletes a texture from the cache given a its key name
+ @since v0.99.4
+ */
+-(void) removeTextureForKey: (NSString*) textureKeyName;
 
 @end
